			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: Support for cyclic terms in ground/1

  * FIXED: allow for peek_byte(-1), etc.  Michael A. Covington.

  * FIXED: Merged saved-state patches from main branch

  * NEW: renamed nb_setval/2 to nb_linkval/2, giving nb_setval/2 a better
    defined semantics.  Added duplicate_term/2 to really duplicate a term.

  * FIXED: module handling in flag/3

  * ADDED: derived_from(File) option to load_files/2.

  * MODIFIED: renamed free_variables/2 into the more widely used name
    term_variables/2.  Added free_variables/2 to the library backcomp,
    so applications with autoloading enabled (default) do not have
    to be modified.

  * ADDED: protect write/1 from looping on cyclic terms.  Short-term
    solution writes ** if it detects a cycle.

  * FIXED: Hanging atom garbage collector in multi-threaded execution
    on Unix platforms.  With lots of help from Sergey Tikhonov.

  * FIXED: make convert_time/7 thread-safe using localtime_r() if
    provided.

  * ADDED: msb/1 arithmetic function.

  * ADDED: support for attributed variables and cyclic terms in copy_term/2


VERSION 5.3.0 (Jan 16, 2003)
============================

  * ADDED: Partial support for cyclic terms.  Covered sofar:
    unify()

  * ADDED: global variables: b_setval/2, b_getval/2, nb_setval/2,
    nb_getval/2.

  * ADDED: Corouting: freeze/2

  * ADDED: Attributed variables: attvar/1, put_attr/3, get_attr/3.


VERSION 5.2.12 (Jan 17, 2004)
=============================

  * FIXED: Crash in atom-garbage collection.  Sergey Tikhonov.

  * FIXED: Memory corruption problem in prompt handling of threads.
    Sergey Tikhonov.

  * FIXED: Deal with EINTR in sem_wait (Sergey Tikhonov).
